fixed overflow

--- a/app/components/Page7/Page7.css
+++ b/app/components/Page7/Page7.css
@@ -29,7 +29,7 @@
   gap: 1rem;
 }
 .p7-btm {
-  margin-bottom: 2.5rem;
+  margin-bottom: 3rem;
 }
 
 .p7-btm > div:nth-of-type(1) {
